Implement global alignment using Needleman-Wunsch algorithm in a new script

--- a/class_quiz.ipynb
+++ b/class_quiz.ipynb
@@ -89,31 +89,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c00354b",
+   "id": "cc3e4854",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SMITH-WATERMAN LOCAL ALIGNMENT\n",
-      "Sequence X: MAGNIFICENT\n",
-      "Sequence Y: MAGNIFIC\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'smith_waterman_local_alignment' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 36\u001b[39m\n\u001b[32m     34\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSequence X: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msequence_X\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     35\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSequence Y: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msequence_Y\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m score, aligned1, aligned2, matrix = \u001b[43msmith_waterman_local_alignment\u001b[49m(\n\u001b[32m     37\u001b[39m     sequence_X, sequence_Y, \n\u001b[32m     38\u001b[39m     match_score=\u001b[32m2\u001b[39m, mismatch_score=-\u001b[32m1\u001b[39m, gap_penalty=-\u001b[32m1\u001b[39m\n\u001b[32m     39\u001b[39m )\n\u001b[32m     41\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mBest local alignment score: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mscore\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     42\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAligned subsequence 1: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maligned1\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'smith_waterman_local_alignment' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def smith_waterman_local_alignment(seq1, seq2, match_score=2, mismatch_score=-1, gap_penalty=-1):\n",
+    "    \"\"\"\n",
+    "    Custom implementation of Smith-Waterman (local) alignment\n",
+    "    Returns: (best_score, aligned_subseq1, aligned_subseq2, score_matrix)\n",
+    "    \"\"\"\n",
+    "    m, n = len(seq1), len(seq2)\n",
+    "    score_matrix = np.zeros((m + 1, n + 1))\n",
+    "    traceback = np.zeros((m + 1, n + 1))\n",
+    "    max_i = 0\n",
+    "    max_j = 0\n",
+    "    max_score = 0\n",
+    "\n",
+    "    for i in range(1, m + 1):\n",
+    "        for j in range(1, n + 1):\n",
+    "            if seq1[i-1] == seq2[j-1]:\n",
+    "                diag = score_matrix[i-1][j-1] + match_score\n",
+    "            else:\n",
+    "                diag = score_matrix[i-1][j-1] + mismatch_score\n",
+    "\n",
+    "            up = score_matrix[i-1][j] + gap_penalty\n",
+    "            left = score_matrix[i][j-1] + gap_penalty\n",
+    "\n",
+    "            # include 0 to allow local restart\n",
+    "            scores = [0, diag, up, left]\n",
+    "            best = max(scores)\n",
+    "            score_matrix[i][j] = best\n",
+    "            traceback[i][j] = scores.index(best)  # 0:stop,1:diag,2:up,3:left\n",
+    "\n",
+    "            if best > max_score:\n",
+    "                max_score = best\n",
+    "                max_i, max_j = i, j\n",
+    "\n",
+    "    # Traceback from best scoring cell until a cell with score 0\n",
+    "    aligned_seq1 = []\n",
+    "    aligned_seq2 = []\n",
+    "    i, j = max_i, max_j\n",
+    "    while i > 0 and j > 0 and score_matrix[i][j] > 0:\n",
+    "        tb = int(traceback[i][j])\n",
+    "        if tb == 1:  # diagonal\n",
+    "            aligned_seq1.append(seq1[i-1])\n",
+    "            aligned_seq2.append(seq2[j-1])\n",
+    "            i -= 1\n",
+    "            j -= 1\n",
+    "        elif tb == 2:  # up (gap in seq2)\n",
+    "            aligned_seq1.append(seq1[i-1])\n",
+    "            aligned_seq2.append('-')\n",
+    "            i -= 1\n",
+    "        elif tb == 3:  # left (gap in seq1)\n",
+    "            aligned_seq1.append('-')\n",
+    "            aligned_seq2.append(seq2[j-1])\n",
+    "            j -= 1\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    aligned_seq1 = ''.join(reversed(aligned_seq1))\n",
+    "    aligned_seq2 = ''.join(reversed(aligned_seq2))\n",
+    "    return max_score, aligned_seq1, aligned_seq2, score_matrix\n",
+    "\n",
     "\n",
     "def align_with_biopython(seq1, seq2):\n",
     "    \"\"\"\n",
